// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render PillSelectorDropdown with default dropdown renderer 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error={null}
  inputProps={
    {
      "name": undefined,
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={[]}
  selectorOptions={
    [
      {
        "displayText": "value1",
        "value": "value1",
      },
      {
        "displayText": "value2",
        "value": "value2",
      },
      {
        "displayText": "value3",
        "value": "value3",
      },
    ]
  }
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
>
  <DatalistItem
    key="value1"
  >
    value1
  </DatalistItem>
  <DatalistItem
    key="value2"
  >
    value2
  </DatalistItem>
  <DatalistItem
    key="value3"
  >
    value3
  </DatalistItem>
</PillSelectorDropdown>
`;

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render PillSelectorDropdown with no dropdown when no options 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error={null}
  inputProps={
    {
      "name": undefined,
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={[]}
  selectorOptions={[]}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
/>
`;

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render error when touched 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error="error"
  inputProps={
    {
      "name": "pill",
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={[]}
  selectorOptions={[]}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
/>
`;
